# BGDIA700-Project-Gestion-des-Taches

./: Arboresence.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: to_do_list.yml
code_projet/: cli.py  model_diplay.py  model_display.py  model_task.py  models.py  version_2.py
docs/: code_projet.rst  conf.py  modules.rst
docs/_build/doctrees/: code_projet.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  code_projet.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/code_projet/: model_display.html  model_task.html
docs/_build/html/_sources/: index.rst.txt
tests/: test_creation.py  test_dispaly.py  test_models.py  test_task.py  test_tasklist.py
tests/coverage_creation_of_task/: __init___py.html  d_e1a4aa9c3a7b70c5___init___py.html  d_e1a4aa9c3a7b70c5_model_task_py.html  index.html  status.json  test_creation_py.html
tests/coverage_display/: __init___py.html  d_e1a4aa9c3a7b70c5___init___py.html  d_e1a4aa9c3a7b70c5_model_display_py.html  d_e1a4aa9c3a7b70c5_model_task_py.html  index.html  status.json  test_dispaly_py.html
tests/htmlcov/: __init___py.html  d_e1a4aa9c3a7b70c5___init___py.html  d_e1a4aa9c3a7b70c5_model_display_py.html  d_e1a4aa9c3a7b70c5_model_task_py.html  d_e1a4aa9c3a7b70c5_version_2_py.html  index.html  status.json  test_creation_py.html  test_dispaly_py.html
