[tool.poetry]
name = "bgdia700-project-gestion-des-taches"
version = "0.1.0"
description = ""
authors = ["apesseu <pesseupesseu@telecom-paris.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.2"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
